Created a survey page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,63 @@
+<!DOCTYPE html>
 <html>
-	<b>
-	Hello World!
-	</b>
+<head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+<style>
+	h1{
+		text-align:center;
+		padding: 20px;
+	}
+</style
 
+</head>
+<body>
+<div class="container">
+<h1>Code Okie: One Line at a Time</h1>
+<br>
+<div class="row">
+  <div class="col-sm-2">
+    <div class="card">
+    <img class="card-img-top" src="images/pre-survey.png" alt="Pre-Survey">
+      <div class="card-body text-center">
+        <a href="https://uco.co1.qualtrics.com/jfe/form/SV_6u3NRpS0KEE2WEZ" target=”_blank” class="btn btn-warning">Pre-Survey</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-2">
+    <div class="card">
+    <img class="card-img-top" src="images/post-survey.png" alt="Post-Survey">
+      <div class="card-body text-center">
+        <a href="https://uco.co1.qualtrics.com/jfe/form/SV_3ecF4OAYK2YqmtT" target=”_blank” class="btn btn-warning">Post-Survey</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-2">
+    <div class="card">
+    <img class="card-img-top" src="images/scratch.png" alt="Scratch Survey">
+      <div class="card-body text-center">
+        <a href="https://uco.co1.qualtrics.com/jfe/form/SV_egF4ceTPiquflKB" target=”_blank” class="btn btn-warning text-right">Scratch Survey</a>
+      </div>
+    </div>
+  </div>  
+  <div class="col-sm-2">
+    <div class="card">
+    <img class="card-img-top" src="images/raspberry.png" alt="Raspberry Pi Survey">
+      <div class="card-body text-center">
+        <a href="https://uco.co1.qualtrics.com/jfe/form/SV_9H4KsW1Grv041VP" target=”_blank” class="btn btn-warning text-right">RPi Survey</a>
+      </div>
+    </div>
+  </div>  
+  <div class="col-sm-2">
+    <div class="card">
+    <img class="card-img-top" src="images/robotics.png" alt="Robotics survey">
+      <div class="card-body ">
+        <a href="https://uco.co1.qualtrics.com/jfe/form/SV_5w11t25rR8qHBtz" target=”_blank” class="btn btn-warning text-right">Robotics Survey</a>
+      </div>
+    </div>
+  </div>  
+</div>
+</div>
+
+</body>
 </html>
+
