--- a/index.html
+++ b/index.html
@@ -2,18 +2,22 @@
 <html>
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-<style>
-	h1{
-		text-align:center;
-		padding: 20px;
-	}
-</style
-
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="container">
 <h1>Code Okie: One Line at a Time</h1>
 <br>
+
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand active" href="index.html">Home</a>
+	<a class="navbar-brand" href="scratch.html">Scratch</a>
+	<a class="navbar-brand" href="appinventor.html">App Inventor</a>
+  </nav>
+
+<br>
+
 <div class="row">
   <div class="col-sm-2">
     <div class="card">
