--- a/appinventor.html
+++ b/appinventor.html
@@ -13,8 +13,8 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">Home</a>
-	<a class="navbar-brand" href="Scratch.html">Scratch</a>
-	<a class="navbar-brand active" href="AppInventor.html">App Inventor</a>
+	<a class="navbar-brand" href="scratch.html">Scratch</a>
+	<a class="navbar-brand active" href="appinventor.html">App Inventor</a>
   </nav>
 
 <br>
