--- a/scratch.html
+++ b/scratch.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,8 +12,8 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">Home</a>
-	<a class="navbar-brand active" href="Scratch.html">Scratch</a>
-	<a class="navbar-brand" href="AppInventor.html">App Inventor</a>
+	<a class="navbar-brand active" href="scratch.html">Scratch</a>
+	<a class="navbar-brand" href="appinventor.html">App Inventor</a>
   </nav>
 <br>
 
