--- a/appinventor.html
+++ b/appinventor.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="container">
-<h1>App Inventor Reviews</h1>
+<h1>App-Inventor Reviews</h1>
 <br>
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">Home</a>
 	<a class="navbar-brand" href="scratch.html">Scratch</a>
-	<a class="navbar-brand active" href="appinventor.html">App Inventor</a>
+	<a class="navbar-brand active" href="appinventor.html">App-Inventor</a>
   </nav>
 
 <br>
