--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 <h1>Code Okie: One Line at a Time</h1>
 <br>
 
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand active" href="index.html">Home</a>
 	<a class="navbar-brand" href="scratch.html">Scratch</a>
-	<a class="navbar-brand" href="appinventor.html">App Inventor</a>
+	<a class="navbar-brand" href="appinventor.html">App-Inventor</a>
   </nav>
 
 <br>
