--- a/scratch.html
+++ b/scratch.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">Home</a>
 	<a class="navbar-brand active" href="scratch.html">Scratch</a>
-	<a class="navbar-brand" href="appinventor.html">App Inventor</a>
+	<a class="navbar-brand" href="appinventor.html">App-Inventor</a>
   </nav>
 <br>
 
