--- a/scratch.html
+++ b/scratch.html
@@ -26,6 +26,14 @@
       </div>
     </div>
   </div>
+  <div class="col-sm-2">
+    <div class="card">
+    <img class="card-img-top" src="images/two.png" alt="Review 02">
+      <div class="card-body text-center">
+        <a href="https://forms.gle/rJku97czFWiNjGjj9" target=”_blank” class="btn btn-warning">Review-02</a>
+      </div>
+    </div>
+  </div>
 
 </div>
 </div>
