--- a/scratch.html
+++ b/scratch.html
@@ -42,7 +42,14 @@
       </div>
     </div>
   </div>
-
+ <div class="col-sm-2">
+    <div class="card">
+    <img class="card-img-top" src="images/four.png" alt="Review 04">
+      <div class="card-body text-center">
+        <a href="https://forms.gle/Bv7hSgU7z1fMtEAx6" target=”_blank” class="btn btn-warning">Review-04</a>
+      </div>
+    </div>
+  </div>
 </div>
 </div>
 
