--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a class="navbar-brand active" href="index.html">Home</a>
 	<a class="navbar-brand" href="scratch.html">Scratch</a>
 	<a class="navbar-brand" href="appinventor.html">App-Inventor</a>
+	<a class="navbar-brand" href="rpi.html">Raspberry Pi</a>
   </nav>
 
 <br>
