--- a/appinventor.html
+++ b/appinventor.html
@@ -15,6 +15,7 @@
     <a class="navbar-brand" href="index.html">Home</a>
 	<a class="navbar-brand" href="scratch.html">Scratch</a>
 	<a class="navbar-brand active" href="appinventor.html">App-Inventor</a>
+	<a class="navbar-brand" href="rpi.html">Raspberry Pi</a>
   </nav>
 
 <br>
