--- a/scratch.html
+++ b/scratch.html
@@ -14,6 +14,7 @@
     <a class="navbar-brand" href="index.html">Home</a>
 	<a class="navbar-brand active" href="scratch.html">Scratch</a>
 	<a class="navbar-brand" href="appinventor.html">App-Inventor</a>
+	<a class="navbar-brand" href="rpi.html">Raspberry Pi</a>
   </nav>
 <br>
 
