Updated coding portion

--- a/coding.html
+++ b/coding.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="container">
-<h1>Raspberry Pi Reviews</h1>
+<h1>Scratch Reviews</h1>
 <br>
 
 
@@ -14,21 +14,26 @@
     <a class="navbar-brand" href="index.html">Home</a>
 	<a class="navbar-brand" href="scratch.html">Scratch</a>
 	<a class="navbar-brand" href="appinventor.html">App-Inventor</a>
-	<a class="navbar-brand active" href="rpi.html">Raspberry Pi</a>
-	<a class="navbar-brand" href="coding.html">Coding Challenge</a>
+	<a class="navbar-brand" href="rpi.html">Raspberry Pi</a>
+	<a class="navbar-brand active" href="coding.html">Coding Challenge</a>
   </nav>
 <br>
 
 <div class="row">
-  <div class="col-sm-2">
-    <div class="card">
-    <img class="card-img-top" src="images/one.png" alt="Review 01">
+  <div class="col-sm-12">
+    <div class="card"> 
       <div class="card-body text-center">
-        <a href="https://forms.gle/uo5eAiUnVDRvaQEu5" target=”_blank” class="btn btn-warning">Review-01</a>
+        <a href=""  class="btn btn-warning">"Using the for loop print all numbers from 0 to 5."</a>
       </div>
     </div>
   </div>
-
+ <div class="col-sm-12">
+    <div class="card"> 
+      <div class="card-body text-center">
+        <a href=""  class="btn btn-warning">"Using the while loop print all numbers from 5 to 10."</a>
+      </div>
+    </div>
+  </div>
 </div>
 </div>
 
