--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<a class="navbar-brand" href="scratch.html">Scratch</a>
 	<a class="navbar-brand" href="appinventor.html">App-Inventor</a>
 	<a class="navbar-brand" href="rpi.html">Raspberry Pi</a>
+	<a class="navbar-brand" href="coding.html">Coding Challenge</a>
   </nav>
 
 <br>
