updated rpi and coding challenge

--- a/coding.html
+++ b/coding.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="container">
-<h1>Scratch Reviews</h1>
+<h1>Coding Challenge</h1>
 <br>
 
 
@@ -20,6 +20,14 @@
 <br>
 
 <div class="row">
+	<div class="col-sm-12">
+    <div class="card"> 
+      <div class="card-body text-center">
+        <a href=""  class="btn btn-warning">"Beyonce went to McDonalds to eat a burger. <br>She had $12 dollars and she spent $10. If her remaining money is less than 0, display a message saying "No Money Left".
+			<br>		If her remaining money is greater than 0, display a message saying "You are Rich"."</a>
+      </div>
+    </div>
+  </div>
   <div class="col-sm-12">
     <div class="card"> 
       <div class="card-body text-center">
