--- a/rpi.html
+++ b/rpi.html
@@ -28,7 +28,14 @@
       </div>
     </div>
   </div>
-
+ <div class="col-sm-2">
+    <div class="card">
+    <img class="card-img-top" src="images/two.png" alt="Review 01">
+      <div class="card-body text-center">
+        <a href="https://forms.gle/b2ie3TK5c7yZdSsdA" target=”_blank” class="btn btn-warning">Review-02</a>
+      </div>
+    </div>
+  </div>
 </div>
 </div>
 
