--- a/inter_rpi.html
+++ b/inter_rpi.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="container">
-<h1>Raspberry Pi Reviews</h1>
+<h1>Intremediate Raspberry Pi Reviews</h1>
 <br>
 
 
@@ -14,8 +14,8 @@
     <a class="navbar-brand" href="index.html">Home</a>
 	<a class="navbar-brand" href="scratch.html">Scratch</a>
 	<a class="navbar-brand" href="appinventor.html">App-Inventor</a>
-	<a class="navbar-brand active" href="rpi.html">Introductory Raspberry Pi</a>
-	<a class="navbar-brand" href="inter_rpi.html">Intermediate Raspberry Pi</a>
+	<a class="navbar-brand" href="rpi.html">Introductory Raspberry Pi</a>
+	<a class="navbar-brand active" href="inter_rpi.html">Intermediate Raspberry Pi</a>
 	<a class="navbar-brand" href="coding.html">Coding Challenge</a>
   </nav>
 <br>
@@ -25,18 +25,11 @@
     <div class="card">
     <img class="card-img-top" src="images/one.png" alt="Review 01">
       <div class="card-body text-center">
-        <a href="https://forms.gle/uo5eAiUnVDRvaQEu5" target=”_blank” class="btn btn-warning">Review-01</a>
+        <a href="https://forms.gle/2ba8vbUzLjm879CN8" target=”_blank” class="btn btn-warning">Review-01</a>
       </div>
     </div>
   </div>
- <div class="col-sm-2">
-    <div class="card">
-    <img class="card-img-top" src="images/two.png" alt="Review 01">
-      <div class="card-body text-center">
-        <a href="https://forms.gle/b2ie3TK5c7yZdSsdA" target=”_blank” class="btn btn-warning">Review-02</a>
-      </div>
-    </div>
-  </div>
+
 </div>
 </div>
 
