--- a/scratch.html
+++ b/scratch.html
@@ -15,6 +15,7 @@
 	<a class="navbar-brand active" href="scratch.html">Scratch</a>
 	<a class="navbar-brand" href="appinventor.html">App-Inventor</a>
 	<a class="navbar-brand" href="rpi.html">Raspberry Pi</a>
+	<a class="navbar-brand" href="inter_rpi.html">Intermediate Raspberry Pi</a>
 	<a class="navbar-brand" href="coding.html">Coding Challenge</a>
   </nav>
 <br>
