--- a/appinventor.html
+++ b/appinventor.html
@@ -16,6 +16,7 @@
 	<a class="navbar-brand" href="scratch.html">Scratch</a>
 	<a class="navbar-brand active" href="appinventor.html">App-Inventor</a>
 	<a class="navbar-brand" href="rpi.html">Raspberry Pi</a>
+	<a class="navbar-brand" href="inter_rpi.html">Intermediate Raspberry Pi</a>
 	<a class="navbar-brand" href="coding.html">Coding Challenge</a>
   </nav>
 
