updated intermediate rpi

--- a/inter_rpi.html
+++ b/inter_rpi.html
@@ -29,7 +29,14 @@
       </div>
     </div>
   </div>
-
+ <div class="col-sm-2">
+    <div class="card">
+    <img class="card-img-top" src="images/two.png" alt="Review 02 & 03">
+      <div class="card-body text-center">
+        <a href="https://forms.gle/oWSLGWGdn1gQ5R786" target=”_blank” class="btn btn-warning">Review-02 & 03</a>
+      </div>
+    </div>
+  </div>
 </div>
 </div>
 
