updated post survey and review for rpi

--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
       </div>
     </div>
   </div>  
+    <div class="col-sm-2">
+    <div class="card">
+    <img class="card-img-top" src="images/raspberry-pi.png" alt="Intermediate RPi survey">
+      <div class="card-body ">
+        <a href="https://uco.co1.qualtrics.com/jfe/form/SV_1XO6AYDse20hjo1" target=”_blank” class="btn btn-warning text-right">Intermediate <br> RPi Survey</a>
+      </div>
+    </div>
+  </div> 
 </div>
 </div>
 
