--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	<a class="navbar-brand" href="appinventor.html">App-Inventor</a>
 	<a class="navbar-brand" href="rpi.html">Raspberry Pi</a>
 	<a class="navbar-brand" href="inter_rpi.html">Intermediate Raspberry Pi</a>
+	<a class="navbar-brand" href="intro_robotics.html">Intorduction Robotics</a>
+	<a class="navbar-brand" href="Inter_robotics.html">Intermediate Robotics</a>
 	<a class="navbar-brand" href="coding.html">Coding Challenge</a>
   </nav>
 
