--- a/intro_robotics.html
+++ b/intro_robotics.html
@@ -15,8 +15,8 @@
 	<a class="navbar-brand" href="scratch.html">Scratch</a>
 	<a class="navbar-brand" href="appinventor.html">App-Inventor</a>
 	<a class="navbar-brand" href="rpi.html">Introductory Raspberry Pi</a>
-	<a class="navbar-brand active" href="inter_rpi.html">Intermediate Raspberry Pi</a>
-	<a class="navbar-brand" href="intro_robotics.html">Intorduction Robotics</a>
+	<a class="navbar-brand" href="inter_rpi.html">Intermediate Raspberry Pi</a>
+	<a class="navbar-brand active" href="intro_robotics.html">Intorduction Robotics</a>
 	<a class="navbar-brand" href="Inter_robotics.html">Intermediate Robotics</a>
 	<a class="navbar-brand" href="coding.html">Coding Challenge</a>
   </nav>
