--- a/Inter_robotics.html
+++ b/Inter_robotics.html
@@ -31,6 +31,15 @@
       </div>
     </div>
   </div>
+	
+<div class="col-sm-2">
+    <div class="card">
+    <img class="card-img-top" src="images/two.png" alt="Review-02">
+      <div class="card-body text-center">
+        <a href="https://forms.gle/mXePeT48FJBTFvxz9" target=”_blank” class="btn btn-warning">Review-02</a>
+      </div>
+    </div>
+  </div>
  
    
 </div>
