--- a/Inter_robotics.html
+++ b/Inter_robotics.html
@@ -49,6 +49,25 @@
       </div>
     </div>
   </div>
+	
+<div class="col-sm-2">
+    <div class="card">
+    <img class="card-img-top" src="images/four.png" alt="Review 04">
+      <div class="card-body text-center">
+        <a href="https://forms.gle/gtv7FH9GXWXz2C2u6" target=”_blank” class="btn btn-warning">Review 04</a>
+      </div>
+    </div>
+  </div>
+	
+<div class="col-sm-2">
+    <div class="card">
+    <img class="card-img-top" src="images/five.png" alt="Review 05">
+      <div class="card-body text-center">
+        <a href="https://google.com" target=”_blank” class="btn btn-warning">Review 05</a>
+      </div>
+    </div>
+  </div>
+
  
    
 </div>
